
    HADOOP-12681. start-build-env.sh fails in branch-2.
    (Kengo Seki via aajisaka)

    HADOOP-12559. KMS connection failures should trigger TGT renewal.
    (Zhe Zhang via xyao)

    HADOOP-12682. Fix TestKMS#testKMSRestart* failure.
    (Wei-Chiu Chuang via xyao)

    HADOOP-12689. S3 filesystem operations stopped working correctly
    (Matt Paduano via raviprak)

Release 2.7.3 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12413. AccessControlList should avoid calling getGroupNames in
    isUserInList with empty groups. (Zhihai Xu via cnauroth)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-12296. when setnetgrent returns 0 in linux, exception should be
    thrown (Chang Li via jlowe)

    HADOOP-12545. Hadoop javadoc has broken links for AccessControlList,
    ImpersonationProvider, DefaultImpersonationProvider, and DistCp.
    (Arshad Mohammad via aajisaka)

    HADOOP-12374. Updated expunge command description.
    (WeiWei Yang via eyang)

    HADOOP-12348. MetricsSystemImpl creates MetricsSourceAdapter with wrong
    time unit parameter. (zxu via rkanter)

    HADOOP-12482. Race condition in JMX cache update. (Tony Wu via lei)

    HADOOP-12565. Replace DSA with RSA for SSH key type in SingleCluster.md.
    (Mingliang Liu via aajisaka)

    HADOOP-12602. TestMetricsSystemImpl#testQSize occasionally fails.
    (Masatake Iwasaki via aajisaka)

    HADOOP-12588. Fix intermittent test failure of TestGangliaMetrics.
    (Masatake Iwasaki via aajisaka)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12232. Upgrade Tomcat dependency to 6.0.44. (cnauroth)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-12186. ActiveStandbyElector shouldn't call monitorLockNodeAsync
    multiple times (zhihai xu via vinayakumarb)

    HADOOP-12191. Bzip2Factory is not thread safe. (Brahma Reddy Battula
    via ozawa)

    HDFS-8767. RawLocalFileSystem.listStatus() returns null for UNIX pipefile.