@@ -2606,9 +2606,6 @@ decl_stmt|;
 if|if
 condition|(
 name|srcExists
-operator|&&
-operator|!
-name|dstExists
 condition|)
 block|{
 comment|// Rename gets exclusive access (via a lease) for HBase write-ahead log
@@ -2649,151 +2646,6 @@ argument_list|,
 literal|null
 argument_list|)
 expr_stmt|;
-block|}
-elseif|else
-if|if
-condition|(
-name|srcExists
-operator|&&
-name|dstExists
-condition|)
-block|{
-comment|// Get a lease on source to block write access.
-name|String
-name|srcName
-init|=
-name|fs
-operator|.
-name|pathToKey
-argument_list|(
-name|srcFile
-argument_list|)
-decl_stmt|;
-name|SelfRenewingLease
-name|lease
-init|=
-literal|null
-decl_stmt|;
-try|try
-block|{
-name|lease
-operator|=
-name|fs
-operator|.
-name|acquireLease
-argument_list|(
-name|srcFile
-argument_list|)
-expr_stmt|;
-comment|// Delete the file. This will free the lease too.
-name|fs
-operator|.
-name|getStoreInterface
-argument_list|()
-operator|.
-name|delete
-argument_list|(
-name|srcName
-argument_list|,
-name|lease
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|AzureException
-name|e
-parameter_list|)
-block|{
-name|String
-name|errorCode
-init|=
-literal|""
-decl_stmt|;
-try|try
-block|{
-name|StorageException
-name|e2
-init|=
-operator|(
-name|StorageException
-operator|)
-name|e
-operator|.
-name|getCause
-argument_list|()
-decl_stmt|;
-name|errorCode
-operator|=
-name|e2
-operator|.
-name|getErrorCode
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e3
-parameter_list|)
-block|{
-comment|// do nothing if cast fails
-block|}
-comment|// If the rename already finished do nothing
-if|if
-condition|(
-operator|!
-name|errorCode
-operator|.
-name|equals
-argument_list|(
-literal|"BlobNotFound"
-argument_list|)
-condition|)
-block|{
-throw|throw
-name|e
-throw|;
-block|}
-block|}
-finally|finally
-block|{
-try|try
-block|{
-if|if
-condition|(
-name|lease
-operator|!=
-literal|null
-condition|)
-block|{
-name|lease
-operator|.
-name|free
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-catch|catch
-parameter_list|(
-name|StorageException
-name|e
-parameter_list|)
-block|{
-name|LOG
-operator|.
-name|warn
-argument_list|(
-literal|"Unable to free lease because: "
-operator|+
-name|e
-operator|.
-name|getMessage
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-block|}
 block|}
 elseif|else
 if|if
