@@ -74,6 +74,34 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|io
+operator|.
+name|IOUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|FSDataOutputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|fs
 operator|.
 name|Path
@@ -148,6 +176,181 @@ operator|.
 name|create
 argument_list|()
 return|;
+block|}
+annotation|@
+name|Test
+DECL|method|testLazyRenamePendingCanOverwriteExistingFile ()
+specifier|public
+name|void
+name|testLazyRenamePendingCanOverwriteExistingFile
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|String
+name|SRC_FILE_KEY
+init|=
+literal|"srcFile"
+decl_stmt|;
+specifier|final
+name|String
+name|DST_FILE_KEY
+init|=
+literal|"dstFile"
+decl_stmt|;
+name|Path
+name|srcPath
+init|=
+operator|new
+name|Path
+argument_list|(
+name|SRC_FILE_KEY
+argument_list|)
+decl_stmt|;
+name|FSDataOutputStream
+name|srcStream
+init|=
+name|fs
+operator|.
+name|create
+argument_list|(
+name|srcPath
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|fs
+operator|.
+name|exists
+argument_list|(
+name|srcPath
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Path
+name|dstPath
+init|=
+operator|new
+name|Path
+argument_list|(
+name|DST_FILE_KEY
+argument_list|)
+decl_stmt|;
+name|FSDataOutputStream
+name|dstStream
+init|=
+name|fs
+operator|.
+name|create
+argument_list|(
+name|dstPath
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|fs
+operator|.
+name|exists
+argument_list|(
+name|dstPath
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|NativeAzureFileSystem
+name|nfs
+init|=
+operator|(
+name|NativeAzureFileSystem
+operator|)
+name|fs
+decl_stmt|;
+specifier|final
+name|String
+name|fullSrcKey
+init|=
+name|nfs
+operator|.
+name|pathToKey
+argument_list|(
+name|nfs
+operator|.
+name|makeAbsolute
+argument_list|(
+name|srcPath
+argument_list|)
+argument_list|)
+decl_stmt|;
+specifier|final
+name|String
+name|fullDstKey
+init|=
+name|nfs
+operator|.
+name|pathToKey
+argument_list|(
+name|nfs
+operator|.
+name|makeAbsolute
+argument_list|(
+name|dstPath
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|nfs
+operator|.
+name|getStoreInterface
+argument_list|()
+operator|.
+name|rename
+argument_list|(
+name|fullSrcKey
+argument_list|,
+name|fullDstKey
+argument_list|,
+literal|true
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|fs
+operator|.
+name|exists
+argument_list|(
+name|dstPath
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|fs
+operator|.
+name|exists
+argument_list|(
+name|srcPath
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|IOUtils
+operator|.
+name|cleanup
+argument_list|(
+literal|null
+argument_list|,
+name|srcStream
+argument_list|)
+expr_stmt|;
+name|IOUtils
+operator|.
+name|cleanup
+argument_list|(
+literal|null
+argument_list|,
+name|dstStream
+argument_list|)
+expr_stmt|;
 block|}
 comment|/**    * Tests fs.delete() function to delete a blob when another blob is holding a    * lease on it. Delete if called without a lease should fail if another process    * is holding a lease and throw appropriate exception    * This is a scenario that would happen in HMaster startup when it tries to    * clean up the temp dirs while the HMaster process which was killed earlier    * held lease on the blob when doing some DDL operation    */
 annotation|@
